--- a/MVC.Logger.Furiax/Logger/wwwroot/css/site.css
+++ b/MVC.Logger.Furiax/Logger/wwwroot/css/site.css
@@ -39,7 +39,16 @@ table {
         opacity: 0.8;
         background-size: cover;
     }
-
+    .background::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(74, 161, 230, 0.2); /* Adjust the color and opacity as needed */
+        z-index: 0;
+    }
 .form-group {
     margin-bottom: 15px;
     margin-top: 15px;
